@@ -1161,6 +1161,12 @@ Otherwise value of py-python-history is used. "
 (make-variable-buffer-local 'py-shell-name)
 (defvaralias 'py-python-command 'py-shell-name)
 
+(defcustom py-ipython-command "ipython"
+  "A PATH/TO/EXECUTABLE or default value `py-shell' may look for, if no shell is specified by command. "
+  :type 'string
+  :group 'python-mode)
+(make-variable-buffer-local 'py-ipython-command)
+
 (defcustom py-shell-toggle-1 py-shell-name
   "A PATH/TO/EXECUTABLE or default value used by `py-toggle-shell'. "
   :type 'string
@@ -6021,7 +6027,7 @@ Default is nil Use `M-x customize-variable' to set it permanently"
                     ["Hide comments when hiding all"
                      (setq py-hide-comments-when-hiding-all
                            (not py-hide-comments-when-hiding-all))
-                     :help "Hide the comments too when you do an `hs-hide-all'.Use `M-x customize-variable' to set it permanently"
+                     :help "Hide the comments too when you do `hs-hide-all'. Use `M-x customize-variable' to set it permanently"
                      :style toggle :selected py-hide-comments-when-hiding-all]
 
                     ["Max help buffer "
